// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Integration ('Output Mode: Flat With Secret') > should generate expected files > generate-output-with-secret/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/resource-hash: ef8b3a740be8768d508858c4ec66e004e45aeefc50c74c88a47fc0756fddbc71
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 892a9e08a434e8a248896ae787a90dc7172689e952f68e93fa69d83d8c409d92
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
          env:
            - name: API_KEY
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key
            - name: API_KEY_2
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key_2
      imagePullSecrets:
        - name: secret-application-provider
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 1986ce080ec6fe1bb59f22b9f58946179778c9dbef960a97f3cca888ff59a402
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Flat') > should generate expected files > generate-output-flat/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/resource-hash: ef8b3a740be8768d508858c4ec66e004e45aeefc50c74c88a47fc0756fddbc71
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 43228af29b48c42dc0ad1ce925c2dd4e63dc4dd8421016e0592d2f455734baf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 1986ce080ec6fe1bb59f22b9f58946179778c9dbef960a97f3cca888ff59a402
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 43228af29b48c42dc0ad1ce925c2dd4e63dc4dd8421016e0592d2f455734baf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 1986ce080ec6fe1bb59f22b9f58946179778c9dbef960a97f3cca888ff59a402
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/resource-hash: ef8b3a740be8768d508858c4ec66e004e45aeefc50c74c88a47fc0756fddbc71
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/frontend.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 43228af29b48c42dc0ad1ce925c2dd4e63dc4dd8421016e0592d2f455734baf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/resource-hash: 1986ce080ec6fe1bb59f22b9f58946179778c9dbef960a97f3cca888ff59a402
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/resource-hash: ef8b3a740be8768d508858c4ec66e004e45aeefc50c74c88a47fc0756fddbc71
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when --root is not provided (default to cwd) > generate-output-non-root-dir/example/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-name: SimpleApp
    kubricate.thaitype.dev/resource-hash: 84241ff01519b9522ccbd4f2cdf8d22d850a7c7af3aba576447dd0157ab07adf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when --root is not provided (default to cwd) > generate-output-non-root-dir/example/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-name: SimpleApp
    kubricate.thaitype.dev/resource-hash: 89a63d5a0e71a81f00e668fd1fccee5103200d731e8b1a3546f31e06eb639fe7
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when --root is not provided (default to cwd) > generate-output-non-root-dir/example/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-name: Namespace
    kubricate.thaitype.dev/resource-hash: 3492d8e193f760528e44917ab2f004d6a9eed4bae268a2f6fb965eb802d28914
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when run from different cwd > generate-output-non-root-dir/example/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-name: SimpleApp
    kubricate.thaitype.dev/resource-hash: 84241ff01519b9522ccbd4f2cdf8d22d850a7c7af3aba576447dd0157ab07adf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when run from different cwd > generate-output-non-root-dir/example/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-name: SimpleApp
    kubricate.thaitype.dev/resource-hash: 89a63d5a0e71a81f00e668fd1fccee5103200d731e8b1a3546f31e06eb639fe7
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration (non-root directory) > should generate expected files when run from different cwd > generate-output-non-root-dir/example/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-name: Namespace
    kubricate.thaitype.dev/resource-hash: 3492d8e193f760528e44917ab2f004d6a9eed4bae268a2f6fb965eb802d28914
---
"
`;
